<resources>
    <string name="app_name">MyFuelApp</string>
    <string name="login_label">Login</string>
    <string name="email_label">Email</string>
    <string name="email_hint">name@email.com</string>
    <string name="password_label">Password</string>
    <string name="login_as_admin_text">Login as Admin</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password_link_text">Forgot Password?</string>
    <string name="login_btn_text">Login</string>
    <string name="logo_description">logo</string>
    <string name="et_firstName">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile">Mobile</string>
    <string name="signup_title">Sign Up</string>
    <string name="login_link">Have an account? Login</string>
    <string name="register_locator">Register Fuel Location</string>
    <string name="select_area">Select Area</string>
    <string name="view_shed">View Shed</string>
    <string name="queue_settings">Queue Settings</string>
    <string name="your_position_label">Your Position</string>
    <string name="leave_after_pumping">Leave After Pumping Fuel</string>
    <string name="leave_without_pumping">Leave Without Pumping Fuel</string>
</resources>