<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="98dp"
            android:contentDescription="@string/logo_description"
            app:srcCompat="@drawable/fuelapplogo" />

        <TextView
            android:id="@+id/RegisterTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_title"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="#009688"
            android:textSize="36sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/etFuelStationName"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/edittext_rounded_corners"
                    android:ems="10"
                    android:hint="@string/et_firstName"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColorHint="#A1887F"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/etLastName"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/edittext_rounded_corners"
                    android:ems="10"
                    android:hint="@string/last_name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColorHint="#A1887F"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/edittext_rounded_corners"
                    android:ems="10"
                    android:hint="@string/email_label"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:textColorHint="#A1887F"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/editTextPetrol92"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/edittext_rounded_corners"
                    android:ems="10"
                    android:hint="@string/mobile"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:textColorHint="#A1887F"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/edittext_rounded_corners"
                    android:ems="10"
                    android:hint="@string/password_label"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:textColorHint="#A1887F"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/edittext_rounded_corners"
                    android:ems="10"
                    android:hint="@string/confirm_password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:textColorHint="#A1887F"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnRegisterFuel"
                    android:layout_width="match_parent"
                    android:layout_height="62dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/edittext_rounded_corners"
                    android:backgroundTint="#009688"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:text="@string/sign_up"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textColorLink="#FFFFFF"
                    android:textSize="24sp"
                    tools:ignore="DuplicateSpeakableTextCheck" />

                <TextView
                    android:id="@+id/linkLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="25dp"
                    android:minHeight="48dp"
                    android:onClick="onClick"
                    android:text="@string/login_link"
                    android:textSize="20sp" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>