<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UsersQueueSettingsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="114dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/logo_description"
            app:srcCompat="@drawable/fuelapplogo" />

        <TextView
            android:id="@+id/queueSettingsLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/queue_settings"
            android:textAlignment="center"
            android:textColor="#009688"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/positionLabel"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/your_position_label"
            android:textColor="#0E0E0E"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="20"
            android:textColor="#018382"
            android:textSize="34sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="127dp"
                android:contentDescription="@string/logo_description"
                app:srcCompat="@drawable/leaveque2" />

            <Button
                android:id="@+id/btnLeaveAfterPump"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_rounded_corners"
                android:backgroundTint="#009688"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="@string/leave_after_pumping"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textColorLink="#FFFFFF"
                android:textSize="16sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="127dp"
                android:contentDescription="@string/logo_description"
                app:srcCompat="@drawable/leaveque1" />

            <Button
                android:id="@+id/btnLeaveAfterPump3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_rounded_corners"
                android:backgroundTint="#009688"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="@string/leave_without_pumping"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textColorLink="#FFFFFF"
                android:textSize="16sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>